# caum-agentbeats-purple

./: .dockerignore  .gitignore  AGENTBEATS_EXPERIMENT_PLAN.md  Dockerfile  README.md  REGISTER_ON_AGENTBEATS.md  amber-manifest.json5  pyproject.toml
.github/workflows/: docker-publish.yml
scripts/: package_handoff.ps1  run_local.ps1  run_pibench_canary.ps1  verify_local.ps1
src/caum_agentbeats_purple/: __init__.py  action_format.py  agent.py  caum_layer.py  executor.py  server.py  structural_advisor.py
tests/: test_agent.py  test_caum_layer.py  test_structural_advisor.py
