[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caum-agentbeats-purple"
version = "0.1.0"
description = "AgentBeats Purple Agent wrapped with CAUM structural observation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20,<1.0.0",
    "httpx>=0.28.1",
    "litellm>=1.0.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/caum_agentbeats_purple"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
